Add seed dates for brand and vehicles
